# industrial_calibration

./: .clang-format  .gitignore  .rosinstall  .travis.yml  .travis_ceres.sh  CHANGELOG.rst  CMakeLists.txt  README.md  colcon.pkg  dependencies.repos  dependencies.rosinstall  industrial_calibration.rosinstall  package.xml
analysis/: CMakeLists.txt
analysis/src/: camera_intrinsic_calibration_analysis.cpp  extrinsic_hand_eye_calibration_analysis.cpp  homography_analysis.cpp  noise_qualification.cpp  projection.cpp  statistics.cpp
applicable_pose_generator/: CMakeLists.txt  package.xml
applicable_pose_generator/src/: pose_reachability_filter.cpp
calibration_guis/: CMakeLists.txt  cal_gui_plugin_description.xml  calibration_guis_plugin_description.xml  mainpage.dox  package.xml
calibration_guis/launch/: calibration_guis.launch
calibration_guis/src/: calibration_gui.cpp  drive_widget.cpp  icalgui.cpp  icalgui_main_window.cpp  main.cpp  main_window.cpp  qnode.cpp  traj_panel.cpp
calibration_guis/ui/: main_window.ui
caljob_creator/: CMakeLists.txt  package.xml
caljob_creator/launch/: caljob.yaml  caljob_create.launch  joint_traj_create.launch  mcc_joint_traj.launch  mcc_joint_traj_new.yaml  mcc_wrist_joint_traj.launch
caljob_creator/src/: joint_traj.cpp  main.cpp
core/: CMakeLists.txt
core/src/: camera_intrinsics.cpp  dh_chain.cpp  types.cpp  utils.cpp
examples/: CMakeLists.txt  camera_intrinsic.cpp  extrinsic_hand_eye.cpp  kinematic_calibration.cpp  noise_qualification_2d.cpp  pnp.cpp  utils.cpp  utils.h
gui/: CMakeLists.txt  README.md
gui/resources/: resources.qrc
gui/src/: aruco_grid_target_finder.cpp  aruco_grid_target_finder.ui  aspect_ratio_pixmap_label.cpp  camera_calibration_data_manager_widget.cpp  camera_calibration_data_manager_widget.ui  camera_intrinsic_calibration_widget.cpp  camera_intrinsic_calibration_widget.ui  camera_intrinsics.cpp  camera_intrinsics.ui  charuco_grid_target_finder.cpp  charuco_grid_target_finder.ui  configurable_widget.cpp  extrinsic_hand_eye_calibration_3d_widget.cpp  extrinsic_hand_eye_calibration_3d_widget.ui  extrinsic_hand_eye_calibration_configuration_widget.cpp  extrinsic_hand_eye_calibration_configuration_widget.ui  extrinsic_hand_eye_calibration_widget.cpp  extrinsic_hand_eye_calibration_widget.ui  ic_app.cpp  modified_circle_grid_target_finder.cpp  modified_circle_grid_target_finder.ui  point_cloud_circle_finder.hpp  target_finder.cpp  target_finder.ui  transform_guess.cpp  transform_guess.ui
ical_core/: CMakeLists.txt  package.xml
ical_core/cmake/: ical_core-config.cmake.in
ical_core/examples/: CMakeLists.txt  extrinsic_hand_eye.cpp  kinematic_calibration.cpp  noise_qualification_2d.cpp  pnp.cpp  utils.h
ical_core/src/: ceres_math_utilities.cpp  dh_chain.cpp
ical_core/test/: CMakeLists.txt  camera_intrinsic_calibration_validation_utest.cpp  conversion_utest.cpp  covariance_utest.cpp  dh_chain_kinematic_calibration_utest.cpp  dh_chain_kinematic_measurement_utest.cpp  dh_parameter_utest.cpp  homography_utest.cpp  maximum_likelihood_utest.cpp  noise_qualification_utest.cpp  pnp_utest.cpp  serialization_utest.cpp
industrial_calibration_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
industrial_calibration_gui/config/: calibration.perspective  calibration.rviz
industrial_calibration_gui/launch/: cell_calibration.launch
industrial_calibration_gui/resource/: calibration_control.ui
industrial_calibration_gui/scripts/: calibration_control
industrial_extrinsic_cal/: CMakeLists.txt  package.xml
industrial_extrinsic_cal/action/: calibration.action  manual_target_location.action  manual_trigger.action  robot_jv_trigger.action  robot_pose_trigger.action  robot_trigger.action
industrial_extrinsic_cal/cfg/: circle_grid_finder.cfg
industrial_extrinsic_cal/config/: ACA1920_25gc.yaml  ACA1920_25gc_21511083.yaml  Basler21511083.yaml  Basler21511094.yaml  industrial_extrinsic_calibration.rviz  range_excal.rviz  rosconsole.config
industrial_extrinsic_cal/launch/: BaslerFix.txt  basler_calibration_service.launch  basler_camera.launch  blending_calibration.launch  calibrationTarget.py  calibration_node.launch  calibration_service.launch  camera.launch  cameras.launch  create_mcirclegrid.m  godel_cal_service.launch  ifm.launch  intrinsic_calibration.launch  pose_verification.launch  rangeNmono.launch  range_camera_excal.launch  single_sensor.launch  spirit_calibration.launch  spirit_calibration2.launch  target_display.launch  target_locator.launch  target_to_camera_optical_transform_publisher.launch  test.launch  visualize_cal.launch  world_tf_publisher.launch  world_to_robot_tf.launch  world_to_target_tf.launch
industrial_extrinsic_cal/src/: ba_ex_cal.cpp  basic_types.cpp  calibration_job.cpp  calibration_job2.cpp  calibration_job_class.cpp  calibration_job_definition.cpp  calibration_job_definition2.cpp  calibration_service.cpp  caljob_yaml_parser.cpp  camera_class.cpp  camera_definition.cpp  camera_yaml_parser.cpp  camera_yaml_parser_indigo.cpp  ceres_blocks.cpp  ceres_cost_utils.cpp  ceres_cost_utils_test.cpp  ceres_costs_utils.cpp  check_if_points_in_pic.cpp  chkIfpntsInPic.cpp  circle_detector.cpp  conical_pose_generator.cpp  mono_ex_cal.cpp  mutable_joint_state_publisher.cpp  observation_data_point.cpp  observation_scene.cpp  points_yaml_parser.cpp  points_yaml_parser_indigo.cpp  pose_yaml_parser.cpp  ros_camera_observer.cpp  ros_robot_scene_trigger_action_server.cpp  ros_scene_trigger_server.cpp  ros_target_display.cpp  ros_transform_interface.cpp  runtime_utils.cpp  target.cpp  targets_yaml_parser.cpp  targets_yaml_parser_indigo.cpp  test_cal_job.cpp  test_ros_cam_obs.cpp  transform_interface.cpp
industrial_extrinsic_cal/srv/: FileOp.srv  cal_srv_solve.srv  (+7 more)
intrinsic_cal/: CMakeLists.txt  asus_ir_cal.rviz  package.xml
optimizations/: CMakeLists.txt
rgbd_depth_correction/: CMakeLists.txt  README.md  nodelets.xml  package.xml
stand_alone_gui/: CMakeLists.txt  package.xml
target_finder/: CMakeLists.txt  package.xml
target_finders/: CMakeLists.txt
widget/: CMakeLists.txt
(+546 files in other folders)
