<?xml version="1.0"?>
<package>
  <name>calibration_guis</name>
  <version>0.1.0</version>
  <description>
    This gui can be used for rail calibration.
  </description>
  <maintainer email="lewii@gmail.com">Lawrence Lewis</maintainer>
  <author>Lawrence Lewis</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rviz</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>industrial_extrinsic_cal</build_depend>
  <run_depend>rviz</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
 
  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/calibration_guis_plugin_description.xml"/>
  </export>

</package>
