<?xml version="1.0"?>
<package format="2">
  <name>calibration_guis</name>
  <version>0.0.0</version>
  <description>
    This gui can be used to orchestrate numerous calibrations
  </description>
  <maintainer email="lewii@gmail.com">Lawrence Lewis</maintainer>
  <author>Lawrence Lewis</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>rviz</depend>
  <depend>roscpp</depend>
  <depend>qt_build</depend>
  <depend>std_msgs</depend>
  <depend>industrial_extrinsic_cal</depend>

  <export>
    <rviz plugin="${prefix}/cal_gui_plugin_description.xml"/>
  </export>

</package>
