<?xml version="1.0"?>
<package format="2">
  <name>caljob_creator</name>
  <version>0.1.0</version>
  <description>
    The calibration job creator.
  </description>
  <author email="clewis@swri.org">Chris Lewis</author>
  <maintainer email="clewis@swri.org">Chris Lewis</maintainer>
  <license>Apache2.0</license>

  <url type="website">http://wiki.ros.org/caljob_creator</url>
  <url type="bugtracker">https://github.com/ros-industrial/industrial_calibration/issues</url>
  <url type="repository">https://github.com/ros-industrial/industrial_calibration</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>industrial_extrinsic_cal</depend>
  <depend>yaml-cpp</depend>
  
</package>
